# python-starter

./: README.md  main.py  pyproject.toml  ruff.toml
.github/instructions/: general.instructions.md  python.instructions.md
src/: aluno.py  sala.py  vaca.py
